# ostrich-api

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
migrations/2022-05-19-184814_user/: up.sql
migrations/2022-07-15-083354_emailers/: down.sql  up.sql
migrations/2022-08-18-210018_add_biling_level_and_rename_authid/: down.sql  up.sql
migrations/2022-08-23-204121_listing_data/: down.sql  up.sql
migrations/2022-08-26-071246_add_bathrooms_to_emailer/: down.sql  up.sql
src/: config.rs  db_conn.rs  error.rs  lib.rs  schema.rs  utils.rs
src/handlers/: auth.rs  emailer.rs  mod.rs  stripe.rs  user.rs
src/models/: emailer.rs  listing_data.rs  mod.rs  user.rs
src/routes/: auth.rs  emailer.rs  stripe.rs  user.rs
src/services/: cash_on_cash.rs  cognito.rs  email.rs  mod.rs  secrets_manager.rs  stripe.rs  user.rs  zillow.rs
terraform/: .terraform.lock.hcl  data.tf  deploy.sh  main.tf  outputs.tf  variables.tf
