[package]
name = "ostrich-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-sdk-cognitoidentityprovider = "0.11.0"
aws-config = "0.11.0"
base64 = "0.13.0"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.4", features = ["chrono", "postgres", "r2d2"] }
dotenv = "0.15.0"
env_logger = "0.8.4"
hex = "0.4.3"
hmac = "0.12.1"
http = "0.2.6"
log = "0.4.14"
reqwest = { version = "0.11", features = ["json"]}
serde = { version = "1", features = ["derive"] }
serde_derive = "1.0.126"
serde_json = "1.0.81"
sha2 = "0.10.2"
tokio = { version = "1", features = ["full"] }
warp = { version = "0.3.2", features = ["tls"] }
sendgrid-async = "0.1.0"
thousands = "0.2.0"
urlencoding = "2.1.0"
tokio-stream = "0.1.9"
